--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,5 @@
-To Do
+'To Do
 
--Simplify code with functions and procedures
--Add For Next loop
--Add tabbing to next text box / button
+'Simplify code with functions and procedures
+'Add For Next loop
+'Add tabbing to next text box / button
